--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 				<header>
 					<h2>Data Science Projects</h2>
 				</header>
-				<!-- <p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
+				<p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
 				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Act on this message</a>
-				</footer> -->
+				</footer>
 			</section>
 
 		<!-- Feature 1 -->
