--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 				<footer><::before></::before>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Explore Projects</a>
 					</footer>
-				<footer>
+				<!-- <footer>
 					<a href="#banner2" class="button style2 scrolly scrolly-centered">Get To Know Me</a>
 
-				</footer>
+				</footer> -->
 			</section>
 
 		<!-- Banner -->
