--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 					<h1>Terri John</h1>
 					<p>Data Scientist | World Traveler</p>
 				</header>
-				<footer><::before></::before>
+				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Explore Projects</a>
+					<a href="#banner2" class="button style2 scrolly scrolly-centered">Get To Know Me</a>
 					</footer>
 				<!-- <footer>
 					<a href="#banner2" class="button style2 scrolly scrolly-centered">Get To Know Me</a>
