--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Explore Projects</a>
 					<a href="#banner2" class="button style2 scrolly scrolly-centered">Get To Know Me</a>
 					</footer>
-				<!-- <footer>
-					<a href="#banner2" class="button style2 scrolly scrolly-centered">Get To Know Me</a>
 
-				</footer> -->
 			</section>
 
 		<!-- Banner -->
-			<section id="banner">
+			<section id="banner2">
 				<header>
 					<h2>Data Science Projects</h2>
 				</header>
@@ -78,6 +75,7 @@
 			</article>
 
 		<!-- Portfolio -->
+		<section id="banner">
 			<article class="container box style2">
 				<header>
 					<h2>Magnis parturient</h2>
@@ -99,6 +97,7 @@
 					</div>
 				</div>
 			</article>
+		</section>
 
 		<!-- Contact -->
 			<article class="container box style3">
