--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 				<header>
 					<h2>Data Science Projects</h2>
 				</header>
-				<p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
+				<!-- <p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
 				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Act on this message</a>
-				</footer>
+				</footer> -->
 			</section>
 
 		<!-- Feature 1 -->
@@ -64,13 +64,13 @@
 
 		<!-- Feature 2 -->
 			<article class="container box style1 left">
-				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+				<a href="https://github.com/tjohn07/mass_mobilization_and_world_changing" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Mollis posuere<br />
-						lectus lacus</h2>
+						<h2>Predicting the Outcome of Protests<br />
+						An Exploration of the Mass Mobilization Dataset Alongside World Governance Indicators</h2>
 					</header>
-					<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
+					<p>For this project, I merged data from the Mass Mobilizatin dataset with data related to world governance indicators to find correlations and build binary and multiclass classification models to predict violence during protests.</p>
 				</div>
 			</article>
 
