--- a/index.html
+++ b/index.html
@@ -38,18 +38,17 @@
 			</section>
 
 		<!-- Banner -->
-			<section id="banner2">
+			<section id="banner">
 				<header>
 					<h2>Data Science Projects</h2>
 				</header>
-				<!-- <p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
+				<p>Click on the Links to Visit the Github Repo for Each Project<a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
 				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Act on this message</a>
-				</footer> -->
+				</footer>
 			</section>
-
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
 				<a href="https://github.com/mludwig137/gini-microloan-recommender-system" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
