--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Explore Projects</a>
-					<a href="#banner2" class="button style2 scrolly scrolly-centered">Get To Know Me</a>
+					<a href="#bannerget" class="button style2 scrolly scrolly-centered">Get To Know Me</a>
 					</footer>
 
 			</section>
@@ -74,12 +74,12 @@
 			</article>
 
 		<!-- Portfolio -->
-		<section id="banner2">
+		<section id="bannerget">
 			<article class="container box style2">
 				<header>
 					<h2>Learn More</h2>
-					<!-- <p>Justo phasellus et aenean dignissim<br />
-					placerat cubilia purus lectus.</p> -->
+					<p>Justo phasellus et aenean dignissim<br />
+					placerat cubilia purus lectus.</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
@@ -88,12 +88,12 @@
 						<div class="3u"><a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
 						<div class="3u"><a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
 					</div>
-					<!-- <div class="row 0%">
+					<div class="row 0%">
 						<div class="3u"><a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
 						<div class="3u"><a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
 						<div class="3u"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
 						<div class="3u"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
-					</div> -->
+					</div>
 				</div>
 			</article>
 		</section>
