--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Explore Projects</a>
-					<a href="#bannerget" class="button style2 scrolly scrolly-centered">Get To Know Me</a>
+					<a href="#bannerget" class="button style2 scrolly scrolly-centered">Contact Me</a>
+					<a href="https://www.linkedin.com/in/terri-john/" class="button style2 scrolly scrolly-centered">LinkedIn</a>
+					<a href="https://docs.google.com/document/d/1J-DvH0WXvi_rDUQwqfUgpPZw8v3aHZOMa_u52iheQDo/edit?usp=sharing" class="button style2 scrolly scrolly-centered">Resume</a>
+					<a href="https://github.com/tjohn07" class="button style2 scrolly scrolly-centered">GitHub</a>
 					</footer>
 
 			</section>
@@ -74,7 +77,7 @@
 			</article>
 
 		<!-- Portfolio -->
-		<section id="bannerget">
+		<!-- <section id="bannerget">
 			<article class="container box style2">
 				<header>
 					<h2>Learn More</h2>
@@ -96,13 +99,14 @@
 					</div>
 				</div>
 			</article>
-		</section>
+		</section> -->
 
 		<!-- Contact -->
+		<section id="bannerget">
 			<article class="container box style3">
 				<header>
-					<h2>Nisl sed ultricies</h2>
-					<p>Diam dignissim lectus eu ornare volutpat orci.</p>
+					<h2>Contact Me</h2>
+					<p></p>
 				</header>
 				<form method="post" action="#">
 					<div class="row 50%">
@@ -123,6 +127,7 @@
 					</div>
 				</form>
 			</article>
+		</section>
 
 		<!-- Generic -->
 		<!--
@@ -281,7 +286,7 @@
 			</article>
 		-->
 
-		<section id="footer">
+		<section id="bannerget">
 			<ul class="icons">
 				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
