--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 				<header>
 					<h2>Data Science Projects</h2>
 				</header>
-				<p>Click on the Links to Visit the Github Repo for Each Project<a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
-				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
-				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				<p>Click on the Links to Visit the Github Repo for Each Project<a href="">AJ</a> <a href=""></a>.<br />
+				<br />
+				<a href=""></a>.</p>
 				<footer>
-					<a href="#first" class="button style2 scrolly">Act on this message</a>
+					<a href="#first" class="button style2 scrolly">Scroll Down</a>
 				</footer>
 			</section>
 		<!-- Feature 1 -->
@@ -70,9 +70,9 @@
 				<div class="inner">
 					<header>
 						<h2>Predicting the Outcome of Protests<br />
-						An Exploration of the Mass Mobilization Dataset Alongside World Governance Indicators</h2>
+						</h2>
 					</header>
-					<p>For this project, I merged data from the Mass Mobilizatin dataset with data related to world governance indicators to find correlations and build binary and multiclass classification models to predict violence during protests.</p>
+					<p>I merged data from the Mass Mobilizatin dataset with data related to world governance indicators classification models to predict violence during protests.</p>
 				</div>
 			</article>
 
