--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<h2>Predicting the Outcome of Protests<br />
 						</h2>
 					</header>
-					<p>I merged data from the Mass Mobilizatin dataset with data related to world governance indicators classification models to predict violence during protests.</p>
+					<p>I merged data from the Mass Mobilizatin dataset with data related to world governance indicators to develop classification models to predict violence during protests.</p>
 				</div>
 			</article>
 
