--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<header>
 					<h2>Data Science Projects</h2>
 				</header>
-				<p>Click on the Links to Visit the Github Repo for Each Project<a href="">AJ</a> <a href=""></a>.<br />
+				<p>Click on the Links to Visit the Github Repo for Each Project<a href=""></a> <a href=""></a>.<br />
 				<br />
 				<a href=""></a>.</p>
 				<footer>
@@ -60,7 +60,7 @@
 						<h2>Data for Good:<br />
 						A Recommender System for Microloan Crowdsourcing</h2>
 					</header>
-					<p>Working with a team of data scientists, we explored data related to the Kiva microloan crowdsourcing platform, and built a recommender system to increase user engatement.</p>
+					<p>Working with a team of data scientists, we explored data related to the Kiva microloan crowdsourcing platform, and built a recommender system to increase user engagement.</p>
 				</div>
 			</article>
 
@@ -108,7 +108,7 @@
 					<h2>Contact Me</h2>
 					<p></p>
 				</header>
-				<form method="post" action="#">
+				<form method="post" action="tjohn07@gmail.com">
 					<div class="row 50%">
 						<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
 						<div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
@@ -285,22 +285,22 @@
 				</section>
 			</article>
 		-->
-
+<!-- 
 		<section id="bannerget">
-			<ul class="icons">
-				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+			<ul class="icons"> -->
+				<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 				<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-				<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-				<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+				<!-- <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
 					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</div>
-		</section>
+		</section> -->
 
 	</body>
 </html>
