--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<header>
 					<h2>Data Science Projects</h2>
 				</header>
-				<p>Click on the Links to Visit the Github Repo for Each Project<a href=""></a> <a href=""></a>.<br />
+				<p>Click on the Links to Visit the Github Repo for Each Project.<a href=""></a> <a href=""></a><br />
 				<br />
 				<a href=""></a>.</p>
 				<footer>
@@ -108,7 +108,7 @@
 					<h2>Contact Me</h2>
 					<p></p>
 				</header>
-				<form method="post" action="tjohn07@gmail.com">
+				<form method="post" action="mailto:tjohn07@gmail.com">
 					<div class="row 50%">
 						<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
 						<div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
@@ -285,7 +285,7 @@
 				</section>
 			</article>
 		-->
-<!-- 
+<!--
 		<section id="bannerget">
 			<ul class="icons"> -->
 				<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
