--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</section>
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="https://github.com/mludwig137/gini-microloan-recommender-system" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+				<a href="https://github.com/mludwig137/gini-microloan-recommender-system" class="image fit"><img src="images/arno.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Data for Good:<br />
