--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 				</header>
 				<p>Click on the Links to Visit the Github Repo for Each Project.<a href=""></a> <a href=""></a><br />
 				<br />
-				<a href=""></a>.</p>
+				<a href=""></a></p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Scroll Down</a>
 				</footer>
 			</section>
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="https://github.com/mludwig137/gini-microloan-recommender-system" class="image fit"><img src="images/arno.jpg" alt="" /></a>
+				<a href="https://github.com/tjohn07/gini-microloan-recommender-system" class="image fit"><img src="images/arno.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Data for Good:<br />
