image and profile updates

--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>Data Science Projects</h2>
+					<h2>A little bit about me.</h2>
 				</header>
-				<p>Click on the Links to Visit the Github Repo for Each Project.<a href=""></a> <a href=""></a><br />
+				<p>Click on the Links to Visit the Github Repo for Each Project.<a href="">I am an inquisitive problem-solver with significant international and governmental experience that I bring to my role as a data scientist.  I enjoy exploring data to uncover insights and find creative solutions.  I work well under pressure, and have been called 'the calm amid the storm.'  I have 9 years of international work experience, including 5 years working for the US government. I hold a TS clearance.
+
+
+
+
+
+		</a> <a href=""></a><br />
 				<br />
 				<a href=""></a></p>
 				<footer>
@@ -66,7 +72,7 @@
 
 		<!-- Feature 2 -->
 			<article class="container box style1 left">
-				<a href="https://github.com/tjohn07/mass_mobilization_and_world_changing" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+				<a href="https://github.com/tjohn07/mass_mobilization_and_world_changing" class="image fit"><img src="images/astana.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Predicting the Outcome of Protests<br />
