--- a/index.html
+++ b/index.html
@@ -45,17 +45,13 @@
 				<header>
 					<h2>A little bit about me.</h2>
 				</header>
-				<p>Click on the Links to Visit the Github Repo for Each Project.<a href="">I am an inquisitive problem-solver with significant international and governmental experience that I bring to my role as a data scientist.  I enjoy exploring data to uncover insights and find creative solutions.  I work well under pressure, and have been called 'the calm amid the storm.'  I have 9 years of international work experience, including 5 years working for the US government. I hold a TS clearance.
-
-
-
-
+				<p>I am an inquisitive problem-solver with significant international and governmental experience that I bring to my role as a data scientist.  I enjoy exploring data to uncover insights and find creative solutions.  I work well under pressure, and have been called 'the calm amid the storm.'  I have 9 years of international work experience, including 5 years working for the US government.<a href="">
 
 		</a> <a href=""></a><br />
 				<br />
 				<a href=""></a></p>
 				<footer>
-					<a href="#first" class="button style2 scrolly">Scroll Down</a>
+					<a href="#first" class="button style2 scrolly">Explore My Data Science Projects</a>
 				</footer>
 			</section>
 		<!-- Feature 1 -->
