--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Explore Projects</a>
 					<a href="#bannerget" class="button style2 scrolly scrolly-centered">Contact Me</a>
 					<a href="https://www.linkedin.com/in/terri-john/" class="button style2 scrolly scrolly-centered">LinkedIn</a>
-					<a href="https://docs.google.com/document/d/1J-DvH0WXvi_rDUQwqfUgpPZw8v3aHZOMa_u52iheQDo/edit?usp=sharing" class="button style2 scrolly scrolly-centered">Resume</a>
+					<a href="files/Terri_John_resume" download="Terri_John_resume">Download My Resume</a>
+					<!-- <a href="https://docs.google.com/document/d/1J-DvH0WXvi_rDUQwqfUgpPZw8v3aHZOMa_u52iheQDo/edit?usp=sharing" class="button style2 scrolly scrolly-centered">Resume</a> -->
 					<a href="https://github.com/tjohn07" class="button style2 scrolly scrolly-centered">GitHub</a>
 					</footer>
 
@@ -62,7 +63,7 @@
 						<h2>Data for Good:<br />
 						A Recommender System for Microloan Crowdsourcing</h2>
 					</header>
-					<p>Working with a team of data scientists, we explored data related to the Kiva microloan crowdsourcing platform, and built a recommender system to increase user engagement.</p>
+					<p>Working with a team of data scientists, I explored data related to the Kiva microloan crowdsourcing platform, and built a recommender system to increase user engagement.</p>
 				</div>
 			</article>
 
@@ -74,7 +75,7 @@
 						<h2>Predicting the Outcome of Protests<br />
 						</h2>
 					</header>
-					<p>I merged data from the Mass Mobilizatin dataset with data related to world governance indicators to develop classification models to predict violence during protests.</p>
+					<p>I merged data from the Mass Mobilization dataset with data related to world governance indicators to develop classification models to predict violence during protests.</p>
 				</div>
 			</article>
 
