--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Explore Projects</a>
 					<a href="#bannerget" class="button style2 scrolly scrolly-centered">Contact Me</a>
 					<a href="https://www.linkedin.com/in/terri-john/" class="button style2 scrolly scrolly-centered">LinkedIn</a>
-					<a href="files/Terri_John_resume" download="Terri_John_resume">Download My Resume</a>
+					<a href="files/Terri_John_resume.pdf" class="button style2 scrolly scrolly-centered">download="Terri_John_resume">Download My Resume</a>
 					<!-- <a href="https://docs.google.com/document/d/1J-DvH0WXvi_rDUQwqfUgpPZw8v3aHZOMa_u52iheQDo/edit?usp=sharing" class="button style2 scrolly scrolly-centered">Resume</a> -->
 					<a href="https://github.com/tjohn07" class="button style2 scrolly scrolly-centered">GitHub</a>
 					</footer>
