--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Explore Projects</a>
-					<a href="#bannerget" action="mailto:tjohn07@gmail.com" class="button style2 scrolly scrolly-centered">Contact Me</a>
+					<a href="mailto:tjohn07@gmail.com" class="button style2 scrolly scrolly-centered">Contact Me</a>
 					<a href="https://www.linkedin.com/in/terri-john/" class="button style2 scrolly scrolly-centered">LinkedIn</a>
 					<a href="files/Terri_John_resume.pdf" class="button style2 scrolly scrolly-centered" download="Terri_John_resume">Download My Resume</a>
 					<!-- <a href="https://docs.google.com/document/d/1J-DvH0WXvi_rDUQwqfUgpPZw8v3aHZOMa_u52iheQDo/edit?usp=sharing" class="button style2 scrolly scrolly-centered">Resume</a> -->
