remove contact form

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		</section> -->
 
 		<!-- Contact -->
-		<section id="bannerget">
+		<!-- <section id="bannerget">
 			<article class="container box style3">
 				<header>
 					<h2>Contact Me</h2>
@@ -133,7 +133,7 @@
 					</div>
 				</form>
 			</article>
-		</section>
+		</section> -->
 
 		<!-- Generic -->
 		<!--
