testing paragraph spacing

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 					<h1>Terri John</h1>
 					<p>Data Scientist | World Traveler</p><br>
 				</header>
-				<footer>
+			<p>	<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Explore Projects</a><br>
 					<a href="mailto:tjohn07@gmail.com" class="button style2 scrolly scrolly-centered">Contact Me</a><br>
 					<a href="https://www.linkedin.com/in/terri-john/" class="button style2 scrolly scrolly-centered">LinkedIn</a><br>
 					<a href="files/Terri_John_resume.pdf" class="button style2 scrolly scrolly-centered" download="Terri_John_resume">Download My Resume</a><br>
 					<!-- <a href="https://docs.google.com/document/d/1J-DvH0WXvi_rDUQwqfUgpPZw8v3aHZOMa_u52iheQDo/edit?usp=sharing" class="button style2 scrolly scrolly-centered">Resume</a> -->
 					<a href="https://github.com/tjohn07" class="button style2 scrolly scrolly-centered">GitHub</a>
-					</footer>
+				</footer></p>
 
 			</section>
 
