--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 				<header>
 					<h2>A little bit about me.</h2>
 				</header>
-				<p>I am an inquisitive problem-solver with significant international and governmental experience that I bring to my role as a data scientist.
-					I enjoy exploring data to uncover insights and find creative solutions.  I work well under pressure, and have been called 'the calm amid the storm.'
-					  I have 9 years of international work experience, including 5 years working for the US government.
-						I have a passion for travel, and have lived in 7 countries spanning 3 continents. <a href="">
+				<p>I am an inquisitive data scientist and problem-solver with a decade of international and governmental experience
+					and a passion for travel. I enjoy exploring data to uncover insights and find creative solutions.
+					I work well under pressure, and have been called 'the calm amid the storm.’
+					To date, I have lived in 7 countries spanning 3 continents." <a href="">
 
 		</a> <a href=""></a><br />
 				<br />
