--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<p>I am an inquisitive data scientist and problem-solver with a decade of international and governmental experience
 					and a passion for travel. I enjoy exploring data to uncover insights and find creative solutions.
 					I work well under pressure, and have been called 'the calm amid the storm.’
-					To date, I have lived in 7 countries spanning 3 continents." <a href="">
+					To date, I have lived in 7 countries spanning 3 continents. <a href="">
 
 		</a> <a href=""></a><br />
 				<br />
